# malodivo

./: LICENSE  README.md  malodivo.cabal  stack.yaml
src/: Algorithm.hs  Column.hs  Input.hs  Main.hs  NoTranspose.hs  Pretty.hs  Redistribute.hs
test/: Redistribute.hs
