
name:                malodivo
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  hs-source-dirs:      src
  exposed-modules:     Redistribute
                     , Algorithm
                     , Pretty
                     , Input
                     , Column
  build-depends:       base >= 4.7 && < 5
                     , pretty
                     , lens
                     , onpartitions
  default-language:    Haskell2010


executable malodivo
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , pretty
                     , lens
  main-is :            Main.hs
  default-language:    Haskell2010


test-suite test-Redistribute
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           Redistribute.hs
    default-language:  Haskell2010
    extensions:        PackageImports
    build-depends:     base
                     , malodivo
                     , QuickCheck

